# cline

./: .env.exsample  README.md  pyproject.toml  requirements.txt
.github/workflows/: create-requirements.yml
cli-notify/: cline.py
cline/: cline.py
